# lets-make-a-meal-game

./: CAOS_Medical_Lab_20210524.kt  DAldiFoodAttack.csv  FirebaseApp.java  GUPSYGoogleResearchProject.ipynb  LetsMakeaMealGame.ipynb  LetsMakeaMealSubGame.py  Main.java  MainActivity.kt  PostmarkDotNet.csharp  PusherManager.cs  README.md  bugsnag.py  config.yaml  depression_happiness.csv  diabetes variables.txt  diabetesvariables.txt  gi_table_cleaned.csv  gupsygoogleresearchproject.py  index.py  letsmakeamealgame.cs  main.py  pyproject.toml  realm_config.json  replit.nix  sentry.py  settings.py  tokengen.py
auth/: custom_user_data.json
data_sources/mongodb-atlas/: config.json
data_sources/mongodb-atlas/DatoCMS/GUPSYPublic/: rules.json
data_sources/mongodb-atlas/GUPSY/FoodAccessHousehold/: relationships.json  rules.json  schema.json
data_sources/mongodb-atlas/GUPSY/GUPSYClinics/: rules.json  schema.json
data_sources/mongodb-atlas/GUPSY/MentalHealthFAQ/: rules.json
functions/: config.json  package.json
ghismic/: CAOSREAXSONsetup.py  GUPSYGoogleResearchProject.ipynb  gupsygoogleresearchproject.py
hosting/: config.json  metadata.json
hosting/files/: PALEOSCollectionIntrospectionSchema.json  PALEOSCollectionSchema.graphql
hosting/files/PALEOS/: dev_paleos.json  dev_paleos.yaml
http_endpoints/: config.json
sync/: config.json
